// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Should render checked and match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: none;
}

.c6 {
  margin-right: 5px;
  border-radius: 5px;
}

.c1:disabled + label > .c5 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c4:hover {
  cursor: pointer;
}

.c1:disabled + .c3 {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <input
      checked=""
      class="c1 c2"
      id="test-checkbox"
      type="checkbox"
    />
    <label
      class="c3 c4"
      for="test-checkbox"
    >
      <img
        class="c5 c6"
        src="IMAGE_MOCK"
      />
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Should render unchecked and match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: none;
}

.c6 {
  margin-right: 5px;
  border-radius: 5px;
}

.c1:disabled + label > .c5 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c4:hover {
  cursor: pointer;
}

.c1:disabled + .c3 {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1 c2"
      id="test-checkbox"
      type="checkbox"
    />
    <label
      class="c3 c4"
      for="test-checkbox"
    >
      <img
        class="c5 c6"
        src="IMAGE_MOCK"
      />
    </label>
  </div>
</div>
`;
